# beatbox

./: AUTHORS  CMakeLists.txt  CMakeLists.txt.old  README  config.vala.cmake
core/: CMakeLists.txt~  CoverInterface.vala  DatabaseInterface.vala  EqualizerPreset.vala  FileInterface.vala  InfoInterface.vala  LastFMInterface.vala  LibraryInterface.vala  ListSetupInterface.vala  MediaEditorInterface.vala  PluginManager.vala  PodcastInterface.vala  TopDisplayInterface.vala  config.vala
core.old/: ActionsInterface.vala  CMakeLists.txt  DeviceInterface.vala  IconsInterface.vala  Library.vala  LibraryWindowInterface.vala  NowPlayingViewInterface.vala  OperationsInterface.vala  PlaybackInterface.vala  PlaylistInterface.vala  Settings.vala  SideTreeCategory.vala
core.old/CellRenderers/: CellDataFunctionHelper.vala  SmartAlbumRenderer.vala
core.old/Devices/: Device.vala
core.old/Grids/: FastGrid.vala  FastGridModel.vala
core.old/Info/: AlbumInfo.vala  InfoSource.vala  LyricFetcher.vala  Lyrics.vala  LyricsInterface.vala  TrackInfo.vala
core.old/Lists/: DuplicateColumn.vala  MusicColumn.vala  PodcastColumn.vala  RadioColumn.vala
core.old/Media/: Album.vala  ExternalAlbum.vala  Genre.vala  LyricFetcher.vala  Media.vala
core.old/Operations/: MediasOperation.vala  ParseRssOperation.vala
core.old/Playlists/: BasePlaylist.vala  SmartPlaylist.vala  SmartQuery.vala
core.old/Preferences/: PreferencesSection.vala
core.old/TopDisplay/: Display.vala
core.old/Utils/: Icon.vala  Search.vala  String.vala
core.old/Widgets/: NavigationArrows.vala
core/Devices/: DevicePreferences.vala
core/Info/: ArtistInfo.vala  BasicInfo.vala  InfoURL.vala
core/Lists/: FastList.vala  FastListModel.vala
core/Media/: Artist.vala  Media.vala  Preview.vala
core/Operations/: FilesOperation.vala  Operation.vala  PlaylistOperation.vala
core/Playlists/: StaticPlaylist.vala
core/Utils/: Numeric.vala  String.vala  TimeUtils.vala  UI.vala
core/Views/: StyledContentBox.vala  TreeViewSetup.vala  View.vala
core/Widgets/: FieldEditor.vala  StyledBox.vala
data/: beatbox.desktop
data/database/: Create.sql
debian/: control
plugins.old/: CMakeLists.txt
plugins.old/AZLyrics/: AZLyricsFetcher.vala  AZLyricsPlugin.vala  CMakeLists.txt  azlyrics.plugin
plugins.old/LastFMInfo/: LastFMInfoPlugin.vala  LastFMInfoSource.vala  lastfminfo.plugin
plugins.old/Store/: Store.vala  StorePlugin.vala  store.plugin
plugins/LastFMInfo/: CMakeLists.txt
plugins/Store/: CMakeLists.txt  CMakeLists.txt~  SearchResult.vala
po/: CMakeLists.txt  ar.po  beatbox.pot  bg.po  bs.po  ca.po  cs.po  da.po  de.po  el.po  en_AU.po  en_GB.po  eo.po  es.po  eu.po  fi.po  fr.po  he.po  hi.po  hr.po  hu.po  id.po  it.po  ko.po  ms.po  my.po  nl.po  nn.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  si.po  sk.po  sl.po  sr.po  sv.po  sw.po  tr.po  (+5 more)
schemas/: CMakeLists.txt  net.launchpad.beatbox.gschema.xml
src/: BeatBox.vala  Beatbox.vala  CMakeLists.txt  CMakeLists.txt~  Config.vala.cmake  main.vala  untitled
src.old/: CMakeLists.txt  main.vala  valac_command
src.old/CellRenderers/: SideBarRenderer.vala
src.old/Core/: Actions.vala  CoverManager.vala  Icons.vala  LibraryManager.vala  LibraryWindow.vala  LyricsManager.vala  PodcastManager.vala
src.old/DBus/: MediaKeyListener.vala  UnityIntegration.vala
src.old/DataBase/: DataBaseManager.vala
src.old/Devices/: CDRomDevice.vala  iPodDevice.vala
src.old/Dialogs/: FileNotFoundDialog.vala  RemoveFilesDialog.vala  SetLibraryFolderConfirmation.vala  SyncWarningDialog.vala  TransferFromDeviceDialog.vala
src.old/GStreamer/: CDDA.vala  GStreamerTagger.vala  Pipeline.vala  Streamer.vala  Video.vala
src.old/Grids/: AlbumGrid.vala  ArtistGrid.vala  ExternalAlbumGrid.vala  GenericGrid.vala  GenreGrid.vala
src.old/Lastfm/: TopArtistSongs.vala
src.old/Libraries/: BaseLibrary.vala  StationLibrary.vala
src.old/Lists/: GenericList.vala  MusicList.vala
src.old/Media/: Podcast.vala  Song.vala  Station.vala
src.old/NowPlayingView/: NowPlayingView.vala  PodcastSummarySection.vala  SongArtistSection.vala  SongSummarySection.vala
src.old/SourceViews/: MusicSourceView.vala  (+3 more)
src/CellRenderers/: SmartAlbumDataFunc.vala
src/Core/: FileOperator.vala  Info.vala  LibraryManager.vala  ListSetupManager.vala  OperationsManager.vala  PlaybackManager.vala  PlaylistManager.vala
src/DBus/MPRIS/: MPRIS.vala  SoundMenuIntegration.vala
src/Devices/: AndroidDevice.vala  DeviceManager.vala
src/Dialogs/: InstallGstreamerPluginsDialog.vala  NotImportedDialog.vala
src/GStreamer/: CDRipper.vala  Equalizer.vala  ReplayGain.vala
src/Grids/: AlbumGrid.vala  ArtistGrid.vala  ExternalAlbumGrid.vala  GenericGrid.vala  GenreGrid.vala
src/Interfaces/: IconInterface.vala  LibraryInterface.vala  MediaInterface.vala  OperationInterface.vala
src/Lastfm/: LastFM.vala  SimilarMedia.vala  TopArtistAlbums.vala
src/Libraries/: PodcastLibrary.vala  SongLibrary.vala
src/Lists/: DuplicateList.vala  GenericList.vala  PodcastList.vala  RadioList.vala
src/Managers/: IconManager.vala  OperationManager.vala
src/NowPlayingView/: NowPlayingPage.vala
src/Preferences/: LastfmPreferences.vala  PluginPreferences.vala  PodcastPreferences.vala
src/SourceViews/: DefaultSourceView.vala  DeviceSourceView.vala  HistorySourceView.vala  PlaylistSourceView.vala  PodcastSourceView.vala  SimilarSourceView.vala  SourceView.vala  StationSourceView.vala
src/Store/: Store.vala  XMLParser.vala
src/Store/Widgets/: IconView.vala  ObjectList.vala  StoreView.vala  TagLabel.vala
src/Types/: Icon.vala  Media.vala  Music.vala  Operation.vala
src/Utils/: PixbufUtils.vala  PlaylistUtils.vala  ValueUtils.vala
src/Views/: DeviceSummaryWidget.vala  PopupListView.vala
src/Widgets/: EmbeddedAlert.vala  OptionChooser.vala  SimpleOptionChooser.vala  StatusBar.vala
src/Widgets/TopDisplay/: BufferDisplay.vala  TopDisplay.vala
src/Windows/: AddPodcastWindow.vala  EqualizerWindow.vala  PlaylistNameWindow.vala
src/Windows/Editors/: MediaEditor.vala  SmartPlaylistEditor.vala
vapi/: CMakeLists.txt  libgpod-1.0.vapi
(+49 files in other folders)
